k8s-updated/delivery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: delivery-service:1.0
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
      nodePort: 30004
  type: NodePort
