k8s-updated/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: notification-service:1.0
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
      nodePort: 30005
  type: NodePort
